[package]
name = "Arcade"
version = "0.0.0"
authors = ["Ziyad <ziyadalagla@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Binary Instrumentation Engine"
repository = "https://github.com/hackphobic/Arcade"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]